Reorganize header elements in index.html for improved layout and user focus by moving the warning box to the top and repositioning the app title and personalized greeting.

--- a/public/index.html
+++ b/public/index.html
@@ -87,10 +87,8 @@
 </head>
 
 <body class="bg-gray-50 text-gray-800">
-    <!-- Personalized Greeting -->
-    <div id="personal-greeting" class="text-2xl font-semibold text-purple-700 text-center mt-2 mb-2"></div>
 
-    <!-- Improved Warning Box -->
+    <!-- Improved Warning Box - Moved to Top -->
     <div
         class="mt-4 mb-8 max-w-3xl mx-auto flex items-start gap-4 bg-yellow-50 border-l-8 border-yellow-400 shadow-md rounded-xl p-5 fade-in-warning relative">
         <div class="text-3xl text-yellow-500 mt-1 mr-2">⚠️</div>
@@ -104,6 +102,15 @@
             </div>
         </div>
     </div>
+
+    <!-- App Title - Moved Below Warning -->
+    <header class="text-center mb-8">
+        <h1 class="text-4xl font-bold text-gray-900 mt-4 mb-1">myHealthTracker</h1>
+        <p class="text-lg text-gray-600 mb-2">Check off hospitals and ambulance trusts you've visited.</p>
+    </header>
+
+    <!-- Personalized Greeting -->
+    <div id="personal-greeting" class="text-2xl font-semibold text-purple-700 text-center mt-2 mb-2"></div>
 
     <!-- Full Page Loader -->
     <div id="full-page-loader"
