--- a/public/index.html
+++ b/public/index.html
@@ -160,30 +160,24 @@
 
     <div class="container mx-auto p-4 md:p-8 max-w-7xl">
 
-        <header class="text-center mb-8">
-            <h1 class="text-4xl font-bold text-gray-900">myHealthTracker</h1>
-            <p class="text-lg text-gray-600 mt-2">Check off hospitals and ambulance trusts you've visited.</p>
-
-            <!-- Update the button section -->
-            <div class="mt-6 flex justify-center space-x-2 flex-wrap">
-                <button id="show-stats-btn"
-                    class="bg-indigo-600 text-white font-bold py-2 px-4 rounded-lg hover:bg-indigo-700 transition-colors">Show
-                    Charts</button>
-                <button id="show-map-btn"
-                    class="bg-teal-600 text-white font-bold py-2 px-4 rounded-lg hover:bg-teal-700 transition-colors">Show
-                    Map</button>
-                <button id="show-awards-btn"
-                    class="bg-amber-500 text-white font-bold py-2 px-4 rounded-lg hover:bg-amber-600 transition-colors">Show
-                    Awards</button>
-                <button id="add-record-btn"
-                    class="bg-green-600 text-white font-bold py-2 px-4 rounded-lg hover:bg-green-700 transition-colors hidden">Add
-                    Record</button>
-                <button id="show-profile-btn"
-                    class="bg-purple-600 text-white font-bold py-2 px-4 rounded-lg hover:bg-purple-700 transition-colors hidden">My
-                    Profile</button>
-            </div>
-            <div id="status-message-area" class="mt-4 h-6"></div>
-        </header>
+        <div class="mt-6 flex justify-center space-x-2 flex-wrap">
+            <button id="show-stats-btn"
+                class="bg-indigo-600 text-white font-bold py-2 px-4 rounded-lg hover:bg-indigo-700 transition-colors">Show
+                Charts</button>
+            <button id="show-map-btn"
+                class="bg-teal-600 text-white font-bold py-2 px-4 rounded-lg hover:bg-teal-700 transition-colors">Show
+                Map</button>
+            <button id="show-awards-btn"
+                class="bg-amber-500 text-white font-bold py-2 px-4 rounded-lg hover:bg-amber-600 transition-colors">Show
+                Awards</button>
+            <button id="add-record-btn"
+                class="bg-green-600 text-white font-bold py-2 px-4 rounded-lg hover:bg-green-700 transition-colors hidden">Add
+                Record</button>
+            <button id="show-profile-btn"
+                class="bg-purple-600 text-white font-bold py-2 px-4 rounded-lg hover:bg-purple-700 transition-colors hidden">My
+                Profile</button>
+        </div>
+        <div id="status-message-area" class="mt-4 h-6"></div>
 
         <div id="recent-activity-container"></div>
 
@@ -339,71 +333,11 @@
 
                 setupSnapshotListener();
             } else {
-                // User signed out
-                userId = null;
-                docRef = null;
-                authSignedInView.style.display = 'none';
-                authSignedOutView.style.display = 'block';
-                loadingIndicator.classList.add('loader-hidden');
-
-                // Reset to default local data
-                localData = {
-                    hospitals: [],
-                    ambulance: [],
-                    awards: [],
-                    visitHistory: [],
-                    medicalRecords: [],
-                    symptomTracking: [],
-                    userProfile: {}
-                };
-
-                updateProfileButtonVisibility();
-                renderAll();
+                // User signed out, redirect to login
+                window.location.href = '/login.html';
             }
         });
 
-        document.getElementById('signout-btn').addEventListener('click', () => {
-            signOut(auth);
-        });
-
-        // Update the Google sign-in event listener
-        document.getElementById('google-signin-btn').addEventListener('click', async () => {
-            try {
-                const provider = new GoogleAuthProvider();
-                provider.addScope('profile');
-                provider.addScope('email');
-
-                loadingIndicator.classList.remove('loader-hidden');
-                loaderText.textContent = 'Signing in...';
-
-                const result = await signInWithPopup(auth, provider);
-                console.log('Google sign-in successful:', result.user);
-
-                // The onAuthStateChanged handler will take care of the rest
-            } catch (error) {
-                console.error('Google sign-in error:', error);
-                showStatusMessage(`Sign-in failed: ${error.message}`, 'error');
-                loadingIndicator.classList.add('loader-hidden');
-            }
-        });
-
-        document.getElementById('anon-signin-btn').addEventListener('click', () => {
-            signInAnonymously(auth)
-                .then((result) => {
-                    console.log('Anonymous sign-in successful:', result.user);
-                    setTimeout(() => {
-                        if (!localData.userProfile?.onboardingCompleted) {
-                            showOnboardingQuestionnaire();
-                        }
-                    }, 1000);
-                })
-                .catch(error => {
-                    console.error('Anonymous sign-in error:', error);
-                    showStatusMessage(`Anonymous sign-in failed: ${error.message}`, 'error');
-                });
-        });
-
-        // --- Firestore Data Handling ---
         function setupSnapshotListener() {
             if (!docRef) {
                 console.log("No docRef available for snapshot listener");
@@ -1477,7 +1411,7 @@
                             default: // text
                                 return `
                                                 <div>
-                                                    <label class="block text-sm font-medium text-gray-700 mb-1">${q.label}</label>
+                                                                                                       <label class="block text-sm font-medium text-gray-700 mb-1">${q.label}</label>
                                                     <input type="text" name="condition_${condition}_${q.id}" 
                                                            placeholder="${q.placeholder || ''}"
                                                            class="w-full p-2 border border-gray-300 rounded-md focus:ring-2 focus:ring-purple-500 focus:border-purple-500">
